0.11.0/_sources/reference/generated/spectrochempy.MCRALS.rst
spectrochempy.MCRALS
====================

.. currentmodule:: spectrochempy

.. autoclass:: MCRALS

   

   
   
   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~MCRALS.C
      ~MCRALS.C_constrained
      ~MCRALS.C_constrained_list
      ~MCRALS.C_ls_list
      ~MCRALS.St
      ~MCRALS.St_constrained_list
      ~MCRALS.St_ls
      ~MCRALS.St_ls_list
      ~MCRALS.X
      ~MCRALS.Y
      ~MCRALS.argsGetConc
      ~MCRALS.argsGetSpec
      ~MCRALS.closureConc
      ~MCRALS.closureMethod
      ~MCRALS.closureTarget
      ~MCRALS.components
      ~MCRALS.config
      ~MCRALS.extraOutputGetConc
      ~MCRALS.extraOutputGetSpec
      ~MCRALS.getC_to_C_idx
      ~MCRALS.getConc
      ~MCRALS.getSpec
      ~MCRALS.getSt_to_St_idx
      ~MCRALS.hardConc
      ~MCRALS.hardSpec
      ~MCRALS.kwargsGetConc
      ~MCRALS.kwargsGetSpec
      ~MCRALS.log
      ~MCRALS.max_iter
      ~MCRALS.maxdiv
      ~MCRALS.monoDecConc
      ~MCRALS.monoDecTol
      ~MCRALS.monoIncConc
      ~MCRALS.monoIncTol
      ~MCRALS.n_components
      ~MCRALS.name
      ~MCRALS.nonnegConc
      ~MCRALS.nonnegSpec
      ~MCRALS.normSpec
      ~MCRALS.result
      ~MCRALS.solverConc
      ~MCRALS.solverSpec
      ~MCRALS.storeIterations
      ~MCRALS.tol
      ~MCRALS.unimodConc
      ~MCRALS.unimodConcMod
      ~MCRALS.unimodConcTol
      ~MCRALS.unimodSpec
      ~MCRALS.unimodSpecMod
      ~MCRALS.unimodSpecTol
   
   

   
   
   .. rubric:: Methods Summary

   .. autosummary::
   
      ~MCRALS.fit
      ~MCRALS.fit_transform
      ~MCRALS.get_components
      ~MCRALS.get_params
      ~MCRALS.inverse_transform
      ~MCRALS.params
      ~MCRALS.plot_merit
      ~MCRALS.plotmerit
      ~MCRALS.reset
      ~MCRALS.set_params
      ~MCRALS.to_dict
      ~MCRALS.transform

   
   

   
   
   .. rubric:: Attributes Documentation

   
   .. autoattribute:: C
   .. autoattribute:: C_constrained
   .. autoattribute:: C_constrained_list
   .. autoattribute:: C_ls_list
   .. autoattribute:: St
   .. autoattribute:: St_constrained_list
   .. autoattribute:: St_ls
   .. autoattribute:: St_ls_list
   .. autoattribute:: X
   .. autoattribute:: Y
   .. autoattribute:: argsGetConc
   .. autoattribute:: argsGetSpec
   .. autoattribute:: closureConc
   .. autoattribute:: closureMethod
   .. autoattribute:: closureTarget
   .. autoattribute:: components
   .. autoattribute:: config
   .. autoattribute:: extraOutputGetConc
   .. autoattribute:: extraOutputGetSpec
   .. autoattribute:: getC_to_C_idx
   .. autoattribute:: getConc
   .. autoattribute:: getSpec
   .. autoattribute:: getSt_to_St_idx
   .. autoattribute:: hardConc
   .. autoattribute:: hardSpec
   .. autoattribute:: kwargsGetConc
   .. autoattribute:: kwargsGetSpec
   .. autoattribute:: log
   .. autoattribute:: max_iter
   .. autoattribute:: maxdiv
   .. autoattribute:: monoDecConc
   .. autoattribute:: monoDecTol
   .. autoattribute:: monoIncConc
   .. autoattribute:: monoIncTol
   .. autoattribute:: n_components
   .. autoattribute:: name
   .. autoattribute:: nonnegConc
   .. autoattribute:: nonnegSpec
   .. autoattribute:: normSpec
   .. autoattribute:: result
   .. autoattribute:: solverConc
   .. autoattribute:: solverSpec
   .. autoattribute:: storeIterations
   .. autoattribute:: tol
   .. autoattribute:: unimodConc
   .. autoattribute:: unimodConcMod
   .. autoattribute:: unimodConcTol
   .. autoattribute:: unimodSpec
   .. autoattribute:: unimodSpecMod
   .. autoattribute:: unimodSpecTol
   
   

   
   
   .. rubric:: Methods Documentation

   
   .. automethod:: fit
   .. automethod:: fit_transform
   .. automethod:: get_components
   .. automethod:: get_params
   .. automethod:: inverse_transform
   .. automethod:: params
   .. automethod:: plot_merit
   .. automethod:: plotmerit
   .. automethod:: reset
   .. automethod:: set_params
   .. automethod:: to_dict
   .. automethod:: transform
   
   

.. rubric:: Examples using spectrochempy.MCRALS
.. _sphx_glr_backref_spectrochempy.MCRALS:

.. minigallery:: spectrochempy.MCRALS